--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,6 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-scikit-learn = "*"
 pandas = "*"
 numpy = "*"
 requests = "*"
@@ -18,6 +17,7 @@ gunicorn = "*"
 psycopg2-binary = "*"
 python-dotenv = "*"
 joblib = "*"
+scikit-learn = "~=0.22.2"
 
 [requires]
 python_version = "3.7"
