--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ psycopg2-binary = "*"
 python-dotenv = "*"
 joblib = "*"
 scikit-learn = "~=0.22.2"
+uvloop = "*"
 
 [requires]
 python_version = "3.7"
