use rapidfuzz instead of fuzzywuzzy

--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ pandas = "*"
 numpy = "*"
 requests = "*"
 category-encoders = "*"
-fuzzywuzzy = "*"
+rapidfuzz = "*"
 fastapi = "*"
 uvicorn = "*"
 gunicorn = "*"
